-*-change-log-*-

2.2.0.0 (current development version)
	* Add `HexFloatLiterals` to `KnownExtension`
	* Added `virtual-module` field, to allow modules that are not built
	  but registered (#4875).
	* `copyComponent` and `installIncludeFiles` will look for include
	  headers in the build directory ('dist/build/...' by default)
	  as well (#4866).
	* Added cxx-options and cxx-sources build info fields for seperate
	  compilation of C++ source files (#3700)
	* Remove unused '--allow-newer'/'--allow-older' support (#4527)
	* Change `FlagAssignment` to be an opaque `newtype`.
	* Change `rawSystemStdInOut` to use proper type to represent
	  binary and textual data; new 'Distribution.Utils.IOData' module;
	  removed obsolete 'startsWithBOM', 'fileHasBOM', 'fromUTF8',
	  and 'toUTF8' functions; add new `toUTF8BS`/`toUTF8LBS`
	  encoding functions. (#4666)
	* Warn about `.cabal` file-name not matching package name
	  in 'cabal check' (#4592)
	* By default 'ar' program receives arguments via '@file' format.
	  Old behavior can be restored with '--ar-does-not-support-at-arguments'
	  argument to 'configure' or 'install'. (#4596)
	* Added '.Lens' modules, with optics for package description data
	  types. (#4701)
	* Support for GHC's numeric -g debug levels (#4673).
	* Added elif-conditionals to .cabal syntax (#4750).
	* Support for building with Win32 version 2.6 (#4835).
	* TODO


2.0.1.0 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> October 2017
	* Support for GHC's numeric -g debug levels (#4673).
	* Added a new 'Distribution.Verbosity.modifyVerbosity' combinator
	(#4724).
	* Added a new 'cabal check' warning about unused, undeclared or
	non-Unicode flags.  Also, it warns about leading dash, which is
	unusable but accepted if it's unused in conditionals. (#4687)
	* Modify `allBuildInfo` to include foreign library info (#4763).
	* Documentation fixes.

2.0.0.2 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> July 2017