@@ -1,0 +1,10 @@
+name:           my
+version:        0.1
+license:        BSD3
+cabal-version:  >= 2.1
+build-type:     Simple
+
+executable foo
+    -- default-language is required by cabal-version >= 1.10
+    default-language: Haskell2010
+    main-is:    foo.c
