@@ -1,0 +1,6 @@
+# Setup configure
+Resolving dependencies...
+Configuring my-0.1...
+# Setup build
+Preprocessing executable 'foo' for my-0.1..
+Building executable 'foo' for my-0.1..
