@@ -1,0 +1,5 @@
+# Setup configure
+Configuring my-0.1...
+# Setup build
+Preprocessing executable 'foo' for my-0.1..
+Building executable 'foo' for my-0.1..
